# DiffSynth-Studio

./: .gitignore  pyproject.toml  requirements.txt
diffsynth.egg-info/: SOURCES.txt
diffsynth/data/: evc_data.py  mvdata.py  utils.py
diffsynth/models/: attention.py  flux_controlnet.py  flux_dit.py  flux_vae_al.py  sd3_vae_encoder.py  sd_unet.py
diffsynth/pipelines/: flux_4dsr.py  flux_image_new_taoming.py
diffsynth/trainers/: utils.py  utils_back.py
diffsynth/utils/: __init__.py  color_fix.py  ideal_lpf.py  loss_utils.py  noise_utils.py  rand_utils.py
scripts/: quickstart.py  test_dataset.py  test_dataset.sh  test_flux_vae.py  warping.py
scripts/data/: make_controlnet_data.py  make_controlnet_data.sh  make_kontext_data.py  make_kontext_data.sh  make_training_data.sh  prepare_metadata.py  utils.py
scripts/model/: infer_kontext.py  train.py
scripts/model/FLUX.1-Kontext-dev/: infer.sh  train_finetune_dit_lora.sh  train_finetune_dit_lora_3d_attn.sh
scripts/model/FLUX.1-dev-Controlnet-Upscaler/: debug.sh  infer.py  infer.sh  train_finetune.sh  train_finetune_controlnet.sh  train_finetune_dit_lora.sh  train_orig.sh
scripts/model/flux_controlnet_upscaler/: infer.sh  infer_controlnet.py  train_finetune_dit_lora.sh
scripts/model/flux_kontext/: infer.sh  infer_kontext.py  train_finetune_dit_lora_3d_attn.sh
scripts/models/: debug.sh  infer.py  train.py
scripts/models/FLUX.1-Kontext-dev/: train_finetune_dit_lora.sh
scripts/test/: test_dataset.sh  test_mvdataset.py  test_training.sh  test_warping.py
(+3 files in other folders)
