[project]
name = "diffsynth"
version = "0.1.0"
description = "diffsynth-4dsr"
authors = [{ name = "cxzhou35", email = "cxzhou35@zju.edu.cn" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
homepage = "https://github.com/cxzhou35/project_page"

[tool.basedpyright]
include = ["scripts", "diffsynth"]
exclude = ["**/node_modules", "**/__pycache__", "data"]
typeCheckingMode = "off"
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportAssignmentType = false
reportImplicitRelativeImport = false
reportAny = false


[tool.isort]
profile = "hug"
skip = [".gitignore"]
length_sort = true
lines_between_sections = 1
lines_after_imports = 1
